k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-service
spec:
  type: ClusterIP
  selector:
    app: calculator
  ports:
    - port: 80
      targetPort: 8080
